[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'
[project]
name = "python-common-pkg"
version = "0.0.1"
authors = [
    { name = "rogerogers", email = "rogers@rogerogers.com" },
]
description = "Some common python package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rogerogers/python-common-pkg"
"Bug Tracker" = "https://github.com/rogerogers/python-common-pkg/issues"